02- k8s-resources-yaml/02-GKE-Gateway-API-Domain-Routing-ProdSSL/c4-01-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: mygateway1-regional
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/cert-manager-certs: my-regional-certificate
  addresses:
  - type: NamedAddress
    value: my-regional-pip
